# waff

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: args_handler.rs  checker.rs  daemon_client.rs  formatter.rs  main.rs  mode.rs  terminal_ui.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs  main.rs  prelude.rs
daemon/src/api_request/: mod.rs
lib/: Cargo.toml
lib/src/: command.rs  contest_id.rs  defaults.rs  formatter.rs  language.rs  lib.rs  token.rs
lib/src/instance/: contest.rs  mod.rs  submission.rs  task.rs  test.rs  test_verdict.rs  verdict.rs
lib/src/ts_api/: mod.rs
