[workspace]
members = ["daemon", "client", "lib"]
resolver = "3"

[workspace.dependencies]
futures = "*"
uuid = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
surf = "*"
anyhow = "*"

