[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
futures = "*"
env_logger = "*"
uuid = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
surf = "*"
anyhow = "*"
